# libhx2

./: CMakeLists.txt  codec.c  codecs.c  hx2.c  hx2.h  hxtool.c  stream.c  stream.h  wave.c  wave.h  waveformat.c  waveformat.h
